# ProyectoProgtamacionGrafica2024UNI

./: CMakeLists.txt  Desarrollo del Laberinto del tesoro.docx  HorrorGame.sln  HorrorGame.vcxproj  HorrorGame.vcxproj.filters  README.md  mesh.hpp
assets/: final_map.txt
assets/models/brother/: maya2sketchfab.mtl
assets/models/cage/save/: Cage.mtl
assets/models/enemy/: monster.mtl
assets/models/statue/ForestSkull/: Forest Skull.mtl
assets/models/statue2/save/: untitled.mtl
assets/models/statue3/: 12140_Skull_v3_L2.mtl
assets/models/statue4/: 12337_Statue_v1_l1.mtl
assets/models/wall/: wall.mtl
include/assimp/contrib/zlib/: zutil.h
shaders/: basic_light.fs  basic_light.vs  basic_light2.fs  bg_texture.fs  bg_texture.vs  button.fs  diffuse_map.fs  diffuse_map.vs  diffuse_map_direction.fs  floor.vs  floor_spotlight.fs  framebuffer.fs  framebuffer_screen.fs  light.fs  light.vs  map_spotlight.fs  model_loading.vs  multiple_light.fs  shader3D.vs  skybox.fs  skybox.vs  texture_light.fs  texture_light.vs  texture_shader.fs
src/: boton.hpp  camara3d.hpp  camara_ortografica.hpp  cielo.hpp  constructor.cpp  constructor.hpp  contexto.hpp  controlador_camara.hpp  controlador_escena.hpp  creditos.cpp  creditos.hpp  enemigo.hpp  escena_juego.cpp  escena_juego.hpp  formas.cpp  formas.hpp  instrucciones.cpp  instrucciones.hpp  jugador.hpp  main.cpp  mapa.hpp  menu_escena.cpp  menu_escena.hpp  mesh.hpp  miscelaneos.cpp  miscelaneos.hpp  modelo.cpp  modelo.hpp  radio.hpp  reloj.hpp  respiracion.hpp  sonido.hpp  textura.cpp  textura.hpp  transformaciones.hpp
(+5 files in other folders)
